--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+!.gitkeep
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
@@ -142,3 +143,5 @@ dist
 .svelte-kit
 
 # End of https://www.toptal.com/developers/gitignore/api/node
+uploads/
+db.sqlite
