--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "optionalDependencies": {
+    "pg": "^8.15.6"
+  }
 }
