--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "multer": "^1.4.4",
     "multer-s3": "^3.0.1",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7",
-    "typescript": "^5.8.3"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
     "@types/aws-sdk": "^2.7.4",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
@@ -28,8 +28,11 @@
     "@types/multer-s3": "^3.0.3",
     "@types/node": "^22.15.2",
     "@types/sequelize": "^4.28.20",
+    "eslint": "^9.25.1",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.0"
   },
   "keywords": [],
   "author": "",
