--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-s3": "^3.0.1",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
@@ -24,6 +26,7 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/multer-s3": "^3.0.3",
     "@types/node": "^22.15.2",
