--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "dev": "ts-node-dev src/app.ts"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.7.1",
     "aws-sdk": "^2.1692.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "fslightbox": "^3.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-s3": "^3.0.1",
@@ -35,7 +37,9 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.0"
+    "typescript-eslint": "^8.31.0",
+    "vite": "^6.3.3",
+    "vite-express": "^0.21.1"
   },
   "keywords": [],
   "author": "",
